@@ -25,6 +25,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2009-11-20 [C] Fixed filmstrip hopping around if prev/next buttons get hidden (thread ID 62562) {Timo}
 2009-11-18 [B] Fixed filmstrip showing (after scrolling) the same image several times (thread ID 62461) {Timo}
 2009-11-18 [A] Added Polish language file (user contribution) {eenemeenemuu}
 2009-11-17 [B] Fixed error message after guests upload files with swf uploader (thread ID 62522) {eenemeenemuu}
